# stock-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_macos_intel_release.sh  config.json  deploy.sh  stock_code.csv
.github/workflows/: release-macos-intel.yml
assets/.markets/: cn.csv  jp.csv
assets/configs/: cn.json
assets/filters/: test.json
assets/filters/cn/: default.json
assets/filters/jp/: default.json  test.json
docs/: README_en.md  README_zh.md  TODO.md  architecture.md  coding_principles.md  styles.md
docs/examples/: sample_region.json
raw_data/: 2025_09_13_16_13_raw.csv
scripts/: build_macos_intel_release.sh
src/: action.rs  app.rs  cli.rs  config.rs  database.rs  error.rs  fetcher.rs  lib.rs  main.rs  menu.rs  select.rs  stock.rs  threshold_menu.rs
src/app/: bootstrap.rs  controller.rs  market_registry.rs  mod.rs  state.rs
src/application/: mod.rs
src/config/: cn.rs  jp.rs  loader.rs  mod.rs  registry.rs  validator.rs
src/core/: history.rs  mod.rs
src/fetch/: auth.rs  decode.rs  history.rs  mod.rs  request.rs  snapshots.rs
src/records/: mod.rs  presets.rs  stock_database.rs
src/services/: history.rs  market_codes.rs  mod.rs  quotes.rs
src/storage/: mod.rs  presets.rs  stock_database.rs
src/ui/: chart.rs  csv_picker.rs  main_menu_ratatui.rs  menu_main.rs  menu_sub_load_csv.rs  menu_sub_threshold_setting.rs  mod.rs  navigation.rs  progress.rs  ratatui_app.rs  results.rs  select.rs  styles.rs  terminal.rs  thresholds.rs  utils.rs
src/ui/components/: chart.rs  mod.rs  (+3 more)
src/utils/: file.rs  mod.rs  text.rs  time.rs
(+30 files in other folders)
