[package]
name = "stock-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
unicode-width = "0.1"
crossterm = "0.27"
ratatui = "0.26"
